--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -16,10 +16,10 @@
                 </div>
             </div>
         </div>
-    
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card">
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Canciones por Artista</h5>
                     <p class="card-text">Obtención las canciones de un artista ( Caso de uso de Spotify)</p>
@@ -28,10 +28,39 @@
                         <button type="submit" class="btn btn-success">Buscar en Spotify</button>
                     </form>
                 </div>
+            </div>
+        </div>
+    </div>
+
+
+<h2 class="text-center">Funcionalidades del Examen</h2>
+
+<!--Código Examen-->
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Últimas Canciones Añadidas</h5>
+                <p class="card-text">Visualiza las 10 canciones más recientes registradas en el sistema.</p>
+                <a href="/latest-songs" class="btn btn-primary">Ver Recientes</a>
+            </div>
+        </div>
+    </div>
+
+
+<!--Código Examen-->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Ver Artistas</h5>
+                    <p class="card-text">Obtención de artistas desde mi base de datos siguiendo MVC, Factory, DAO y DTOs</p>
+                    <a href="/getartists" class="btn btn-danger">Artistas</a>
                 </div>
             </div>
         </div>
-    
     </div>
+
+
+</div>
 
 {% endblock %}
